--- a/docs/theme/css/variables.css
+++ b/docs/theme/css/variables.css
@@ -130,6 +130,46 @@
     --search-mark-bg: #a2cff5;
 }
 
+.gameboy {
+    --bg: hsl(0, 0%, 100%);
+    --fg: #333333;
+
+    --sidebar-bg: #c4f0c2;
+    --sidebar-fg: #1e606e;
+    --sidebar-non-existant: #aaaaaa;
+    --sidebar-active: #008cff;
+    --sidebar-spacer: #f4f4f4;
+
+    --scrollbar: #cccccc;
+
+    --icons: #cccccc;
+    --icons-hover: #333333;
+
+    --links: #1e606e;
+
+    --inline-code-color: #6e6b5e;
+
+    --theme-popup-bg: #fafafa;
+    --theme-popup-border: #cccccc;
+    --theme-hover: #e6e6e6;
+
+    --quote-bg: hsl(197, 37%, 96%);
+    --quote-border: hsl(197, 37%, 91%);
+
+    --table-border-color: hsl(0, 0%, 95%);
+    --table-header-bg: hsl(0, 0%, 80%);
+    --table-alternate-bg: hsl(0, 0%, 97%);
+
+    --searchbar-border-color: #aaa;
+    --searchbar-bg: #c4f0c2;
+    --searchbar-fg: #2d1b00;
+    --searchbar-shadow-color: #aaa;
+    --searchresults-header-fg: #666;
+    --searchresults-border-color: #888;
+    --searchresults-li-bg: #e4f2fe;
+    --search-mark-bg: #a2cff5;
+}
+
 .navy {
     --bg: hsl(226, 23%, 11%);
     --fg: #bcbdd0;
