--- a/docs/book/theme/_book.css
+++ b/docs/book/theme/_book.css
@@ -1125,85 +1125,85 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
 .rust mark {
   background-color: #e69f67;
 }
-.gameboy {
+.ayu {
   color: #c5c5c5;
   background-color: #0f1419;
 /* Inline code */
 /* Search */
 }
-.gameboy .content .header:link,
-.gameboy .content .header:visited {
+.ayu .content .header:link,
+.ayu .content .header:visited {
   color: #c5c5c5;
 }
-.gameboy .content .header:link:hover,
-.gameboy .content .header:visited:hover {
+.ayu .content .header:link:hover,
+.ayu .content .header:visited:hover {
   text-decoration: none;
 }
-.gameboy .menu-bar {
+.ayu .menu-bar {
   margin: auto -15px;
 }
-.gameboy .menu-bar > #menu-bar-sticky-container {
+.ayu .menu-bar > #menu-bar-sticky-container {
   background-color: #0f1419;
   border-bottom-color: #0f1419;
   border-bottom-width: 1px;
   border-bottom-style: solid;
 }
-.gameboy .menu-bar.bordered > #menu-bar-sticky-container {
+.ayu .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #182028;
 }
-.gameboy .sidebar {
+.ayu .sidebar {
   background-color: #14191f;
   color: #c8c9db;
 }
-.gameboy .sidebar::-webkit-scrollbar {
+.ayu .sidebar::-webkit-scrollbar {
   background: #14191f;
 }
-.gameboy .sidebar::-webkit-scrollbar-thumb {
+.ayu .sidebar::-webkit-scrollbar-thumb {
   background: #c8c9db;
 }
-.gameboy .chapter li {
+.ayu .chapter li {
   color: #5c6773;
 }
-.gameboy .chapter li a {
+.ayu .chapter li a {
   color: #c8c9db;
 }
-.gameboy .chapter li .active,
-.gameboy .chapter li a:hover {
+.ayu .chapter li .active,
+.ayu .chapter li a:hover {
 /* Animate color change */
   color: #ffb454;
 }
-.gameboy .chapter .spacer {
+.ayu .chapter .spacer {
   background-color: #2d334f;
 }
-.gameboy .menu-bar,
-.gameboy .menu-bar:visited,
-.gameboy .nav-chapters,
-.gameboy .nav-chapters:visited,
-.gameboy .mobile-nav-chapters,
-.gameboy .mobile-nav-chapters:visited,
-.gameboy .menu-bar .icon-button,
-.gameboy .menu-bar a i {
+.ayu .menu-bar,
+.ayu .menu-bar:visited,
+.ayu .nav-chapters,
+.ayu .nav-chapters:visited,
+.ayu .mobile-nav-chapters,
+.ayu .mobile-nav-chapters:visited,
+.ayu .menu-bar .icon-button,
+.ayu .menu-bar a i {
   color: #737480;
 }
-.gameboy .menu-bar i:hover,
-.gameboy .menu-bar .icon-button:hover,
-.gameboy .nav-chapters:hover,
-.gameboy .mobile-nav-chapters i:hover {
+.ayu .menu-bar i:hover,
+.ayu .menu-bar .icon-button:hover,
+.ayu .nav-chapters:hover,
+.ayu .mobile-nav-chapters i:hover {
   color: #b7b9cc;
 }
-.gameboy .mobile-nav-chapters i:hover {
+.ayu .mobile-nav-chapters i:hover {
   color: #c8c9db;
 }
-.gameboy .mobile-nav-chapters {
+.ayu .mobile-nav-chapters {
   background-color: #14191f;
 }
-.gameboy #searchresults a,
-.gameboy .content a:link,
-.gameboy a:visited,
-.gameboy a > .hljs {
+.ayu #searchresults a,
+.ayu .content a:link,
+.ayu a:visited,
+.ayu a > .hljs {
   color: #0096cf;
 }
-.gameboy .theme-popup {
+.ayu .theme-popup {
   color: #c5c5c5;
   background: #14191f;
   border: 1px solid #5c6773;
@@ -1212,13 +1212,13 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
   list-style: none;
   display: none;
 }
-.gameboy .theme-popup .theme:hover {
+.ayu .theme-popup .theme:hover {
   background-color: #191f26;
 }
-.gameboy .theme-popup .default {
+.ayu .theme-popup .default {
   color: #737480;
 }
-.gameboy blockquote {
+.ayu blockquote {
   margin: 20px 0;
   padding: 0 20px;
   color: #c5c5c5;
@@ -1226,35 +1226,35 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
   border-top: 0.1em solid #2f333f;
   border-bottom: 0.1em solid #2f333f;
 }
-.gameboy table td {
+.ayu table td {
   border-color: #182028;
 }
-.gameboy table tbody tr:nth-child(2n) {
+.ayu table tbody tr:nth-child(2n) {
   background: #141b22;
 }
-.gameboy table thead {
+.ayu table thead {
   background: #324354;
 }
-.gameboy table thead td {
+.ayu table thead td {
   border: none;
 }
-.gameboy table thead tr {
+.ayu table thead tr {
   border: 1px #324354 solid;
 }
-.gameboy :not(pre) > .hljs {
+.ayu :not(pre) > .hljs {
   display: inline-block;
   vertical-align: middle;
   padding: 0.1em 0.3em;
   border-radius: 3px;
   color: #ffb454;
 }
-.gameboy a:hover > .hljs {
+.ayu a:hover > .hljs {
   text-decoration: underline;
 }
-.gameboy pre {
+.ayu pre {
   position: relative;
 }
-.gameboy pre > .buttons {
+.ayu pre > .buttons {
   position: absolute;
   z-index: 100;
   right: 5px;
@@ -1262,57 +1262,57 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
   color: #c8c9db;
   cursor: pointer;
 }
-.gameboy pre > .buttons :hover {
+.ayu pre > .buttons :hover {
   color: #ffb454;
 }
-.gameboy pre > .buttons i {
+.ayu pre > .buttons i {
   margin-left: 8px;
 }
-.gameboy pre > .buttons button {
+.ayu pre > .buttons button {
   color: inherit;
   background: transparent;
   border: none;
   cursor: inherit;
 }
-.gameboy pre > .result {
+.ayu pre > .result {
   margin-top: 10px;
 }
-.gameboy .icon-button {
+.ayu .icon-button {
   border: none;
   background: none;
   padding: 0;
   color: inherit;
 }
-.gameboy .icon-button i {
+.ayu .icon-button i {
   margin: 0;
 }
-.gameboy ::-webkit-scrollbar {
+.ayu ::-webkit-scrollbar {
   background: #0f1419;
 }
-.gameboy ::-webkit-scrollbar-thumb {
+.ayu ::-webkit-scrollbar-thumb {
   background: #c8c9db;
 }
-.gameboy #searchbar {
+.ayu #searchbar {
   border: 1px solid #848484;
   border-radius: 3px;
   background-color: #424242;
   color: #fff;
 }
-.gameboy #searchbar:focus,
-.gameboy #searchbar.active {
+.ayu #searchbar:focus,
+.ayu #searchbar.active {
   -webkit-box-shadow: 0 0 3px #d4c89f;
   box-shadow: 0 0 3px #d4c89f;
 }
-.gameboy .searchresults-header {
+.ayu .searchresults-header {
   color: #666;
 }
-.gameboy .searchresults-outer {
+.ayu .searchresults-outer {
   border-bottom: 1px dashed #888;
 }
-.gameboy ul#searchresults li.focus {
+.ayu ul#searchresults li.focus {
   background-color: #252932;
 }
-.gameboy mark {
+.ayu mark {
   background-color: #e3b171;
 }
 .gameboy {
